<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            app:counterMaxLength="50"
            app:counterEnabled="true"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/interest" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <Button android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight=".5"
                    android:textColor="@android:color/white"/>

            <Button android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight=".5"
                    android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
